[tool.poetry]
name = "gadgets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
transformers = "^4.26.1"
sentencepiece = "^0.1.97"
beautifulsoup4 = "^4.11.2"
scikit-learn = "^1.2.1"
sympy = "^1.11.1"
pydantic = "^1.10.4"
evaluate = "^0.4.0"
inflect = "^6.0.2"
sacrebleu = "^2.3.1"
rouge-score = "^0.1.2"
wandb = "^0.13.10"
protobuf = "3.20"
accelerate = "^0.16.0"
lark = "^1.1.5"
polars = "^0.16.16"
rich = "^13.3.3"
joblib = "^1.2.0"
ipywidgets = "^8.0.6"
timeout-decorator = "^0.5.0"
wrapt-timeout-decorator = "^1.3.12.2"
pandarallel = "^1.6.5"
stopit = "^1.1.2"
plotly = "^5.14.1"
nbformat = ">=4.2.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
