[tool.poetry]
name = "gadgets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "2.0.0"
transformers = "4.28.1"
sentencepiece = "^0.1.97"
beautifulsoup4 = "^4.11.2"
scikit-learn = "^1.2.1"
sympy = "^1.11.1"
pydantic = "^1.10.4"
evaluate = "^0.4.0"
inflect = "^6.0.2"
sacrebleu = "^2.3.1"
rouge-score = "^0.1.2"
wandb = "^0.13.10"
protobuf = "3.20"
accelerate = "^0.16.0"
lark = "^1.1.5"
bitsandbytes = "^0.38.1"
loralib = "^0.1.1"
deepspeed = "^0.9.0"
polars = "^0.16.16"
rich = "^13.3.3"
joblib = "^1.2.0"
ipywidgets = "^8.0.6"
timeout-decorator = "^0.5.0"
pandarallel = "^1.6.5"
plotly = "^5.14.1"
nbformat = ">=4.2.0"
typer = "^0.9.0"
peft = "^0.3.0"
requests = "2.29.0"
urllib3 = "1.26.16"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
