[tool.poetry]

name = "gadgets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]

python = ">=3.10,<3.13"

torch = "2.1.1"
xformers = "0.0.23" # must be selected according to torch version
loralib = "^0.1.1"

transformers = "~4.36"
accelerate = ">=0.21.0"
bitsandbytes = ">=0.41.1"
deepspeed = ">=0.10.0"
peft = ">=0.4.0"
sentencepiece = "^0.1.99"
evaluate = "^0.4.0"
sacrebleu = "^2.3.1"
rouge-score = "^0.1.2"
datasets = "^2.14.4"

sympy = "^1.12"
scipy = "^1.10.1"
wandb = "^0.13.10"

beautifulsoup4 = "^4.11.2"
scikit-learn = "^1.2.1"
pydantic = "^2.5.3"
inflect = "^6.0.2"
protobuf = "3.20"
lark = "^1.1.5"
polars = "^0.16.16"
rich = "^13.3.3"
joblib = "^1.2.0"
timeout-decorator = "^0.5.0"
pandarallel = "^1.6.5"
plotly = "^5.14.1"
typer = "^0.9.0"
requests = "2.29.0"
urllib3 = "1.26.16"
nbformat = ">=4.2.0"
ipywidgets = "^8.0.6"
docker = "^6.1.3"
optimum = "^1.12.0"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
guidance = "^0.1.10"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]

ipykernel = "^6.21.2"
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"


[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]

line-length = 110


[tool.isort]

profile = "black"
line_length = 110
